[package]
name = "zama-fileserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = [ "derive" ] }
hydroflow = { git = "https://github.com/hydro-project/hydroflow" }
serde = { version = "1", features = [ "derive" ] }
chrono = { version = "0.4.20", features = [ "serde" ], default-features = true }
blake3 = "1.4.1"
tokio = {version = "1.29.1"}
bromberg_sl2 = { git = "https://github.com/zed-industries/bromberg_sl2.git", features = ["std"] }